<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Application</string>
    <string name="calc_button_c">C</string>
    <string name="calc_button_dot">.</string>
    <string name="calc_button_plus">+</string>
    <string name="calc_button_minus">-</string>
    <string name="calc_button_multiply">×</string>
    <string name="calc_button_divide">÷</string>
    <string name="calc_button_power">^</string>
    <string name="calc_button_log">log</string>
    <string name="calc_button_0">0</string>
    <string name="calc_button_1">1</string>
    <string name="calc_button_2">2</string>
    <string name="calc_button_3">3</string>
    <string name="calc_button_4">4</string>
    <string name="calc_button_5">5</string>
    <string name="calc_button_6">6</string>
    <string name="calc_button_7">7</string>
    <string name="calc_button_8">8</string>
    <string name="calc_button_9">9</string>
    <string name="calc_button_equals">=</string>
    <string name="calculator">Калькулятор</string>
</resources>