<?xml version="1.0" encoding="utf-8"?>
<androidx.gridlayout.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_medium"
    app:columnCount="4"
    app:rowOrderPreserved="false"
    app:columnOrderPreserved="false"
    android:background="#2E3B4E">

    <TextView
        android:id="@+id/calculatorResultTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_columnSpan="4"
        android:layout_marginBottom="@dimen/padding_medium"
        android:background="#455A64"
        android:gravity="end|bottom"
        android:padding="@dimen/padding_medium"
        android:textSize="@dimen/text_size_primary"
        android:textColor="#FFFFFF"
        app:layout_rowWeight="2" />

    <Button
        android:id="@+id/clearButton"
        style="@style/CalculatorOperationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_c"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/powerButton"
        style="@style/CalculatorOperationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_power"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/logarithmButton"
        style="@style/CalculatorOperationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_log"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/divideButton"
        style="@style/CalculatorOperationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_divide"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitSevenButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_7"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitEightButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_8"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitNineButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_9"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/multiplyButton"
        style="@style/CalculatorOperationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_multiply"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitFourButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_4"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitFiveButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_5"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitSixButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_6"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/subtractButton"
        style="@style/CalculatorOperationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_minus"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitOneButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_1"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitTwoButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_2"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitThreeButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_3"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/addButton"
        style="@style/CalculatorOperationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_plus"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1" />

    <Button
        android:id="@+id/digitZeroButton"
        style="@style/CalculatorDigitButton"
        app:layout_columnSpan="2"
        app:layout_columnWeight="2"
        app:layout_rowWeight="1"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        android:text="@string/calc_button_0" />

    <Button
        android:id="@+id/decimalButton"
        style="@style/CalculatorDigitButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:text="@string/calc_button_dot" />

    <Button
        android:id="@+id/equalsButton"
        style="@style/CalculatorOperationButton"
        android:layout_width="@dimen/button_width"
        android:layout_height="@dimen/button_height"
        app:layout_columnWeight="1"
        app:layout_rowWeight="1"
        android:text="@string/calc_button_equals" />

</androidx.gridlayout.widget.GridLayout>